Fixed home layout on mobile devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,14 +14,10 @@
 
 .img-container {
   height: 30vh;
-  position: relative;
+  display: flex;
   img {
-    padding: 15%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    margin: auto;
+    height: 20vh;
   }
 }
 
